--- a/vignettes/SVMDO_guide.Rmd
+++ b/vignettes/SVMDO_guide.Rmd
@@ -161,23 +161,25 @@ RStudio requires R 3.3.0+. Choose a version of R that matches your computer’s 
 
 **R-base Install: 
 
-1. Copy/Paste the address https://cran.r-project.org/bin/windows/base/
-2. Click on Download R-X.X.X for Windows
-3. Click on the downloaded R-X.X.X-win.exe file to install R-base
+1. Copy/Paste the address https://posit.co/download/rstudio-desktop/
+2. Click on “Download and install R"
+3. In the new page, click on "Download R for Windows"
+3. Click on "install R for the first time" 
+4. Click on "Download R-X.X.X-win.exe for Windows"to install R-base
 
 **RStudio Install:
 
-1. Copy/Paste the address  https://posit.co/products/open-source/rstudio/
-2. In RStudio Desktop Section, select open-source edition
-3. In All Installers section, select .exe or .zip version for Windows to download RStudio-X.X.X.exe or RStudio-X.X.X.zip file
-4. Click on the downloaded RStudio-X.X.X.exe and/or unzipped file to install RStudio
+1. Copy/Paste the address  https://posit.co/download/rstudio-desktop/
+2. Click on either download RStudio desktop for windows 
+3. Alternatively, .exe /.zip versions can be downloaded from All Installers section
 
 ## Ubuntu Operating System
 
 **R-base Install:
 
-1. Copy/Paste the address https://cran.r-project.org/
-2. In the Download and Install R section, click on Download R for Linux
+1. Copy/Paste the address https://posit.co/download/rstudio-desktop/
+2. Click on "Download and install R".
+2. Click on "Download R for Linux"
 3. In the parent directory, click on ubuntu/ 
 4. Run the following lines in terminal (as root or by prefixing sudo) to provide access to recent version of R:
 * sudo apt install --no-install-recommends software-properties-common dirmngr
@@ -191,10 +193,9 @@ RStudio requires R 3.3.0+. Choose a version of R that matches your computer’s 
 
 **RStudio Install:
 
-1. Copy/Paste the address https://posit.co/products/open-source/rstudio/
-2. In RStudio Desktop Section, select open-source edition
-3. In All Installers section, select .deb or .debian.tar.gz version for Ubuntu 
-4. Right click on the download and/or unzipped .deb file to install RStudio
+1. Copy/Paste the address  https://posit.co/download/rstudio-desktop/
+2. In All Installers section, select .deb or .debian.tar.gz version for Ubuntu 
+3. Right click on the download and/or unzipped .deb file to install RStudio
    (Alternatively, .deb file can be installed from terminal by typing 
    sudo dpkg -i installed_Rstudio_file.deb)
 
