--- a/vignettes/SVMDO_guide.Rmd
+++ b/vignettes/SVMDO_guide.Rmd
@@ -113,28 +113,31 @@ To open GUI screen, you can directly write **SVMDO::runGUI()** in R console. If 
 
 Steps of Analysis Screen
 
-1. To change your output directory, you can adjust it in the **Choose Directory** section.  Otherwise, default output directory will automatically be used.
-2. To search your transcriptome dataset, use the file detection in **Choose Your Expression Dataset** section. The file will be automatically uploaded into the GUI.
-3. To prevent clashing with test datasets, select **"None"** option from the radio button section.
-4. By clicking on **DEG Analysis** button you further apply differential expression analysis. Labels of tissue_type column in dataset must contain “Nor” and “Tum” for determining normal/tumour (or tumor) samples. A message window saying **Process Completed** will appear if there is not any problem.
-5. When the differential expression process is completed, a user-defined input size (n) is selected to filter the initial gene list (i.e., n number of upregulated and downregulated genes) by entering a number in **Input Size** section. It is predetermined as **50** in GUI which can be changed based on the user. A meesage window saying **process completed** will appear if there is not any problem. If there is problem with the value of input size, you will get a warning about inappropriate input size selection. If the input size remains, algorithm selects all of the differentiallly expressed genes to be used in the next process.
-6. To apply disease ontology-based gene filtration, click on **DO Analysis** button. A message window saying **process completed** will appear if there is not any problem.
-7. To further apply the following feature selection and classification processes, click on the **Classification** button. A message window saying **process completed** will appear if there is not any problem.
-8. Acquired discriminative gene set can be further used for survival analysis to detect individual prognostic genes. To apply this process, use the file detection in **Choose Clinical Data** section for searching clinical data about patient survival followed by clicking on **Survival Analysis** button. A meesage window saying **process completed** will appear if there is not any problem.
+1. To search your transcriptome dataset, use the file detection in **Choose Your Expression Dataset** section. The file will be automatically uploaded into the GUI.
+2. To prevent clashing with test datasets, select **"None"** option from the radio button section.
+3. By clicking on **DEG Analysis** button you further apply differential expression analysis. Labels of tissue_type column in dataset must contain “Nor” and “Tum” for determining normal/tumour (or tumor) samples. A message window saying **Process Completed** will appear if there is not any problem.
+4. When the differential expression process is completed, a user-defined input size (n) is selected to filter the initial gene list (i.e., n number of upregulated and downregulated genes) by entering a number in **Input Size** section. It is predetermined as **50** in GUI which can be changed based on the user. A message window saying **process completed** will appear if there is not any problem. If there is problem with the value of input size, you will get a warning about inappropriate input size selection. If the input size remains, algorithm selects all of the differentiallly expressed genes to be used in the next process.
+5. To apply disease ontology-based gene filtration, click on **DO Analysis** button. A message window saying **process completed** will appear if there is not any problem.
+6. To further apply the following feature selection and classification processes, click on the **Classification** button. A message window saying **process completed** will appear if there is not any problem.
+7. Acquired discriminative gene set can be further used for survival analysis to detect individual prognostic genes. To apply this process, use the file detection in **Choose Clinical Data** section for searching clinical data about patient survival followed by clicking on **Survival Analysis** button. A message window saying **process completed** will appear if there is not any problem.
 
 Applications of Result Screen
 
-1. To visualize discriminative gene sets inside GUI screen, click on **Show Gene Results** button. When you click this button, a table of gene set will appear. The resulting table can be downloaded by clicking on **Download Gene List** button.If there is a problem in the analysis, an error message will appear.
-2. To visualize survival plots of individual genes, two steps have to be applied. First of all, click on **Prepare Plot Lists** button to feed plot information to the visualization system. After that, click on **Show Plots** button to visualize survival plots. Once **Prepare Plot Lists** button is clicked, the resulting plot list can be downloaded by clicking on **Download Plot List** button. If there is a problem in the analysis, an error message will appear at each step.
+1. To visualize discriminative gene sets inside GUI screen, click on **Show Gene Results** button. When you click this button, a table of gene set will appear. If there is a problem in the analysis, an error message will appear.
+2. To visualize survival plots of individual genes, two steps have to be applied. First of all, click on **Prepare Plot Lists** button to feed plot information to the visualization system. After that, click on **Show Plots** button to visualize survival plots. If there is a problem in the analysis, an error message will appear at each step.
+3. Before downloading files, you can adjust the output directory with **Choose Directory** button. It can be used for separating files by selecting a destination before clicking download buttons. If it is desired, files can be downloaded to the same folder by selecting an output directory just one time before the download steps.
+If you do not select any output directory, files will be downloaded to your **working directory**.
+4. To download the resulting discriminative gene set, it is obligatory to define a filename in the **Enter Final Gene Set Filename** section. After that, you can click on **Download Gene List** button to complete the process.
+5. To download survival plots, you have to click on **Download Plot List** button. Names of plot files are automatically done by assigning gene names.
 
 # Using test datasets with SVMDO Main Screen
 Before using the GUI in a study, analysis using the test datasets can be used to understand overall functionality of the algorithm. Test datasets consists of objects of expression and Clinical datasets integrated into summarized experiment objects. These objects are saved in RDA forms and called from **extdata** folder of the package. 
 
 When test datasets are used, predefined input size (n=50) is used. 
-1. First of all, select the dataset to be used in test analysis by using radio buttons. There are two datasets consisting of simplified forms of TCGA-COAD (COAD) and TCGA-LUSC (LUSC) with 400 genes loaded into summarized experiement objects.
-2. To apply differential expression analysis on the selected dataset click on the **DEG Analysis** button. A meesage window saying **process completed** will appear if there is not any problem.
-3. To further apply disease ontology-based gene filtration, click on **DO Analysis** button. A meesage window saying **process completed** will appear if there is not any problem.
-4. To apply survival analysis on the acquired discriminative gene sets, click on **Survival Analysis** button. Clinical dataset for the selected dataset is automatically loaded into the GUI. A meesage window saying **process completed** will appear if there is not any problem.
+1. First of all, select the dataset to be used in test analysis by using radio buttons. There are two datasets consisting of simplified forms of TCGA-COAD (COAD) and TCGA-LUSC (LUSC) with 400 genes loaded into summarized experiment objects.
+2. To apply differential expression analysis on the selected dataset click on the **DEG Analysis** button. A message window saying **process completed** will appear if there is not any problem.
+3. To further apply disease ontology-based gene filtration, click on **DO Analysis** button. A message window saying **process completed** will appear if there is not any problem.
+4. To apply survival analysis on the acquired discriminative gene sets, click on **Survival Analysis** button. Clinical dataset for the selected dataset is automatically loaded into the GUI. A message window saying **process completed** will appear if there is not any problem.
 
 # Workspace Clearance
 When the user task is completed, click on the **Clear Environment** button to remove the global variables created during the algorithm sections. To prevent error in the next usages of GUI, it is a necessary process. It can be applied at any moment without the necessity of completing all of the steps of algorithm. A message window saying **process completed** will appear if there is not any problem.
